# NeuRead

./: .gitignore  .gitmodules  LICENSE  README.md  gradle.properties  settings.gradle.kts
app/: build.gradle.kts
app/src/androidTest/java/com/psimandan/neuread/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/assets/default/: 322EF036-4B07-4ABF-A7AD-FCEBEB4E8ACB.json  3E691537-BECE-4020-B033-90DF5367E467.json  459DD795-836C-42D6-A203-C2F5D469ED3A.json  65E05F4B-27D6-4F9E-A304-AA95B6E69428.json  7EC9C469-AE2C-473C-B38B-3D9B19FFC62F.json  EA5A41C7-4173-4F6E-B061-1BD1B5EF9CCA.json  FD7A65D7-3932-4640-9B93-9DDF0DCA4389.json
app/src/main/cpp/: CMakeLists.txt  llama-bridge.cpp
app/src/main/java/com/psimandan/extensions/: DoubleExts.kt  FileExts.kt  IfThen.kt  LongExts.kt  StringExts.kt  ToolsExts.kt
app/src/main/java/com/psimandan/neuread/: BookPlayer.kt  MainActivity.kt
app/src/main/java/com/psimandan/neuread/app/: NeuReadApp.kt
app/src/main/java/com/psimandan/neuread/audio/: AudioBookPlayer.kt  DownloadAudioWorker.kt
app/src/main/java/com/psimandan/neuread/data/datasource/: EBookDataSource.kt  LibraryDataSource.kt  LibraryDiskDataSource.kt  PrefsStore.kt  PrefsStoreImpl.kt  VoiceDataSource.kt
app/src/main/java/com/psimandan/neuread/data/model/: AudioBook.kt  Book.kt  EBookFile.kt  NeuReadBook.kt
app/src/main/java/com/psimandan/neuread/data/repository/: EBookRepository.kt  LibraryRepository.kt  PlayerStateRepository.kt  PlayerStateRepositoryImpl.kt  VoiceRepository.kt
app/src/main/java/com/psimandan/neuread/di/: AppModule.kt
app/src/main/java/com/psimandan/neuread/domain/usecase/: BookmarkUseCase.kt  BookmarkUseCaseImpl.kt  PlayerUseCase.kt  PlayerUseCaseImpl.kt
app/src/main/java/com/psimandan/neuread/services/: PlayerService.kt
app/src/main/java/com/psimandan/neuread/ui/about/: AboutScreenView.kt
app/src/main/java/com/psimandan/neuread/ui/components/: LoadingStateManager.kt  NiceButton.kt
app/src/main/java/com/psimandan/neuread/ui/init/: SplashScreenView.kt
app/src/main/java/com/psimandan/neuread/ui/navigation/: NavigationViewModel.kt
app/src/main/java/com/psimandan/neuread/ui/player/: PlayerEvent.kt  PlayerScreenView.kt  PlayerViewModel.kt
app/src/main/java/com/psimandan/neuread/ui/settings/: BookSettingsEvent.kt  BookSettingsView.kt  BookSettingsViewModel.kt  SettingsScreenView.kt  SettingsViewModel.kt
app/src/main/java/com/psimandan/neuread/ui/theme/: Color.kt  Theme.kt  Type.kt
app/src/main/java/com/psimandan/neuread/voice/: LlamaEngine.kt  NeuTTSApiClient.kt  NeuTTSSpeechProvider.kt  SimpleSpeechProvider.kt  SpeechBookPlayer.kt  VoiceSelectorViewModel.kt
app/src/main/res/drawable/: ic_launcher_background.xml  ic_launcher_foreground.xml
app/src/main/res/values/: colors.xml  ic_launcher_background.xml  strings.xml  themes.xml
app/src/main/res/values-night/: colors.xml
app/src/main/res/xml/: provider_paths.xml
app/src/test/java/com/psimandan/neuread/: ExampleUnitTest.kt
docs/: ARCHITECTURE.md
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
temp_sources/: log4j.properties
temp_sources/dtd/openebook.org/dtds/oeb-1.2/: oebpkg12.dtd
temp_sources/dtd/www.w3.org/TR/xhtml-modularization/DTD/: xhtml-arch-1.mod  xhtml-notations-1.mod  xhtml11-model-1.mod
temp_sources/nl/siegmann/epublib/browsersupport/: NavigationEvent.java  NavigationEventListener.java  NavigationHistory.java  Navigator.java  package-info.java
temp_sources/nl/siegmann/epublib/domain/: ManifestItemProperties.java  ManifestItemRefProperties.java  ManifestProperties.java  Resource.java
temp_sources/nl/siegmann/epublib/epub/: BookProcessorPipeline.java  DOMUtil.java  EpubProcessorSupport.java  EpubReader.java  EpubWriter.java  HtmlProcessor.java  Main.java  NCXDocument.java  PackageDocumentMetadataReader.java  PackageDocumentReader.java  PackageDocumentWriter.java
temp_sources/nl/siegmann/epublib/util/: CollectionUtil.java  DomUtil.java  NoCloseOutputStream.java  ResourceUtil.java
temp_sources/nl/siegmann/epublib/util/commons/io/: BOMInputStream.java  ByteOrderMark.java  ProxyInputStream.java  XmlStreamReader.java  XmlStreamReaderException.java
temp_sources/nl/siegmann/epublib/utilities/: StreamWriterDelegate.java
(+11 files in other folders)
